new/OberonParser.py
# Generated from Oberon.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OberonParser ( Parser ):

    grammarFileName = "Oberon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'*'", "'.'", "'='", "','", "':'", 
                     "'#'", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", 
                     "'/'", "'&'", "'('", "')'", "'~'", "'['", "']'", "'{'", 
                     "'}'", "'..'", "':='", "'IMPORT'", "'ARRAY'", "'OF'", 
                     "'END'", "'TO'", "'OR'", "'DIV'", "'MOD'", "'NIL'", 
                     "'TRUE'", "'FALSE'", "'IF'", "'THEN'", "'ELSIF'", "'ELSE'", 
                     "'CASE'", "'WHILE'", "'DO'", "'FOR'", "'BY'", "'BEGIN'", 
                     "'RETURN'", "'CONST'", "'TYPE'", "'VAR'", "'MODULE'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "IMPORT", "ARRAY", "OF", "END", "TO", 
                      "OR", "DIV", "MOD", "NIL", "TRUE", "FALSE", "IF", 
                      "THEN", "ELSIF", "ELSE", "CASE", "WHILE", "DO", "FOR", 
                      "BY", "BEGIN", "RETURN", "CONST", "TYPE", "VAR", "MODULE", 
                      "STRING", "IDENT", "LETTER", "DIGIT", "COMMENT", "WS" ]

    RULE_importDeclaration = 0
    RULE_ident = 1
    RULE_qualident = 2
    RULE_identdef = 3
    RULE_integer = 4
    RULE_real = 5
    RULE_number = 6
    RULE_constDeclaration = 7
    RULE_constExpression = 8
    RULE_typeDeclaration = 9
    RULE_type_ = 10
    RULE_arrayType = 11
    RULE_length = 12
    RULE_identList = 13
    RULE_variableDeclaration = 14
    RULE_expression = 15
    RULE_relation = 16
    RULE_simpleExpression = 17
    RULE_addOperator = 18
    RULE_term = 19
    RULE_mulOperator = 20
    RULE_factor = 21
    RULE_designator = 22
    RULE_selector = 23
    RULE_set_ = 24
    RULE_element = 25
    RULE_expList = 26
    RULE_actualParameters = 27
    RULE_statement = 28
    RULE_assignment = 29
    RULE_statementSequence = 30
    RULE_ifStatement = 31
    RULE_whileStatement = 32
    RULE_forStatement = 33
    RULE_declarationSequence = 34
    RULE_module = 35

    ruleNames =  [ "importDeclaration", "ident", "qualident", "identdef", 
                   "integer", "real", "number", "constDeclaration", "constExpression", 
                   "typeDeclaration", "type_", "arrayType", "length", "identList", 
                   "variableDeclaration", "expression", "relation", "simpleExpression", 
                   "addOperator", "term", "mulOperator", "factor", "designator", 
                   "selector", "set_", "element", "expList", "actualParameters", 
                   "statement", "assignment", "statementSequence", "ifStatement", 
                   "whileStatement", "forStatement", "declarationSequence", 
                   "module" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    IMPORT=25
    ARRAY=26
    OF=27
    END=28
    TO=29
    OR=30
    DIV=31
    MOD=32
    NIL=33
    TRUE=34
    FALSE=35
    IF=36
    THEN=37
    ELSIF=38
    ELSE=39
    CASE=40
    WHILE=41
    DO=42
    FOR=43
    BY=44
    BEGIN=45
    RETURN=46
    CONST=47
    TYPE=48
    VAR=49
    MODULE=50
    STRING=51
    IDENT=52
    LETTER=53
    DIGIT=54
    COMMENT=55
    WS=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ImportDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(OberonParser.IMPORT, 0)

        def identList(self):
            return self.getTypedRuleContext(OberonParser.IdentListContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_importDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDeclaration" ):
                listener.enterImportDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDeclaration" ):
                listener.exitImportDeclaration(self)




    def importDeclaration(self):

        localctx = OberonParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_importDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(OberonParser.IMPORT)
            self.state = 73
            self.identList()
            self.state = 74
            self.match(OberonParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(OberonParser.IDENT, 0)

        def getRuleIndex(self):
            return OberonParser.RULE_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdent" ):
                listener.enterIdent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdent" ):
                listener.exitIdent(self)




    def ident(self):

        localctx = OberonParser.IdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ident)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(OberonParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualidentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(OberonParser.IdentContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_qualident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualident" ):
                listener.enterQualident(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualident" ):
                listener.exitQualident(self)




    def qualident(self):

        localctx = OberonParser.QualidentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_qualident)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(OberonParser.IdentContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_identdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentdef" ):
                listener.enterIdentdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentdef" ):
                listener.exitIdentdef(self)




    def identdef(self):

        localctx = OberonParser.IdentdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_identdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.ident()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 81
                self.match(OberonParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(OberonParser.DIGIT)
            else:
                return self.getToken(OberonParser.DIGIT, i)

        def getRuleIndex(self):
            return OberonParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)




    def integer(self):

        localctx = OberonParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.match(OberonParser.DIGIT)
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==54):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RealContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(OberonParser.DIGIT)
            else:
                return self.getToken(OberonParser.DIGIT, i)

        def getRuleIndex(self):
            return OberonParser.RULE_real

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReal" ):
                listener.enterReal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReal" ):
                listener.exitReal(self)




    def real(self):

        localctx = OberonParser.RealContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_real)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 89
                self.match(OberonParser.DIGIT)
                self.state = 92 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==54):
                    break

            self.state = 94
            self.match(OberonParser.T__2)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==54:
                self.state = 95
                self.match(OberonParser.DIGIT)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integer(self):
            return self.getTypedRuleContext(OberonParser.IntegerContext,0)


        def real(self):
            return self.getTypedRuleContext(OberonParser.RealContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):

        localctx = OberonParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_number)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.integer()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.real()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identdef(self):
            return self.getTypedRuleContext(OberonParser.IdentdefContext,0)


        def constExpression(self):
            return self.getTypedRuleContext(OberonParser.ConstExpressionContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_constDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDeclaration" ):
                listener.enterConstDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDeclaration" ):
                listener.exitConstDeclaration(self)




    def constDeclaration(self):

        localctx = OberonParser.ConstDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.identdef()
            self.state = 106
            self.match(OberonParser.T__3)
            self.state = 107
            self.constExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(OberonParser.ExpressionContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_constExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstExpression" ):
                listener.enterConstExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstExpression" ):
                listener.exitConstExpression(self)




    def constExpression(self):

        localctx = OberonParser.ConstExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identdef(self):
            return self.getTypedRuleContext(OberonParser.IdentdefContext,0)


        def type_(self):
            return self.getTypedRuleContext(OberonParser.Type_Context,0)


        def getRuleIndex(self):
            return OberonParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)




    def typeDeclaration(self):

        localctx = OberonParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.identdef()
            self.state = 112
            self.match(OberonParser.T__3)
            self.state = 113
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualident(self):
            return self.getTypedRuleContext(OberonParser.QualidentContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(OberonParser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_type_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_" ):
                listener.enterType_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_" ):
                listener.exitType_(self)




    def type_(self):

        localctx = OberonParser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type_)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [52]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.qualident()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(OberonParser.ARRAY, 0)

        def length(self):
            return self.getTypedRuleContext(OberonParser.LengthContext,0)


        def OF(self):
            return self.getToken(OberonParser.OF, 0)

        def type_(self):
            return self.getTypedRuleContext(OberonParser.Type_Context,0)


        def getRuleIndex(self):
            return OberonParser.RULE_arrayType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayType" ):
                listener.enterArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayType" ):
                listener.exitArrayType(self)




    def arrayType(self):

        localctx = OberonParser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(OberonParser.ARRAY)
            self.state = 120
            self.length()
            self.state = 121
            self.match(OberonParser.OF)
            self.state = 122
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LengthContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constExpression(self):
            return self.getTypedRuleContext(OberonParser.ConstExpressionContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_length

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLength" ):
                listener.enterLength(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLength" ):
                listener.exitLength(self)




    def length(self):

        localctx = OberonParser.LengthContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_length)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.constExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OberonParser.IdentdefContext)
            else:
                return self.getTypedRuleContext(OberonParser.IdentdefContext,i)


        def getRuleIndex(self):
            return OberonParser.RULE_identList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentList" ):
                listener.enterIdentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentList" ):
                listener.exitIdentList(self)




    def identList(self):

        localctx = OberonParser.IdentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_identList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.identdef()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 127
                self.match(OberonParser.T__4)
                self.state = 128
                self.identdef()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identList(self):
            return self.getTypedRuleContext(OberonParser.IdentListContext,0)


        def type_(self):
            return self.getTypedRuleContext(OberonParser.Type_Context,0)


        def getRuleIndex(self):
            return OberonParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = OberonParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.identList()
            self.state = 135
            self.match(OberonParser.T__5)
            self.state = 136
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OberonParser.SimpleExpressionContext)
            else:
                return self.getTypedRuleContext(OberonParser.SimpleExpressionContext,i)


        def relation(self):
            return self.getTypedRuleContext(OberonParser.RelationContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = OberonParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.simpleExpression()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3984) != 0):
                self.state = 139
                self.relation()
                self.state = 140
                self.simpleExpression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return OberonParser.RULE_relation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelation" ):
                listener.enterRelation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelation" ):
                listener.exitRelation(self)




    def relation(self):

        localctx = OberonParser.RelationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_relation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3984) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OberonParser.TermContext)
            else:
                return self.getTypedRuleContext(OberonParser.TermContext,i)


        def addOperator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OberonParser.AddOperatorContext)
            else:
                return self.getTypedRuleContext(OberonParser.AddOperatorContext,i)


        def getRuleIndex(self):
            return OberonParser.RULE_simpleExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleExpression" ):
                listener.enterSimpleExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleExpression" ):
                listener.exitSimpleExpression(self)




    def simpleExpression(self):

        localctx = OberonParser.SimpleExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_simpleExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12 or _la==13:
                self.state = 146
                _la = self._input.LA(1)
                if not(_la==12 or _la==13):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 149
            self.term()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1073754112) != 0):
                self.state = 150
                self.addOperator()
                self.state = 151
                self.term()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OR(self):
            return self.getToken(OberonParser.OR, 0)

        def getRuleIndex(self):
            return OberonParser.RULE_addOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddOperator" ):
                listener.enterAddOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddOperator" ):
                listener.exitAddOperator(self)




    def addOperator(self):

        localctx = OberonParser.AddOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_addOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1073754112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'
